Update icons and fix bugs

--- a/wp-content/themes/Lilim-Theme-Wordpress/src/less/mixins/grid-icon.less
+++ b/wp-content/themes/Lilim-Theme-Wordpress/src/less/mixins/grid-icon.less
@@ -1,9 +1,6 @@
-.grid-icon(@sprite,@color) {
+.grid-icon(@color) {
   .heading {
     .avatar-icon {
-      .front {
-        .sprite-position(@sprite);
-      }
       .back {
         a {
           background-color : lighten(@color, 32%);
